# MBX

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README-connectivity.md  README.md  compile  compile.sh  compile_comet.sh  config.h.in  configure  configure.ac  configure.sh  install.sh  mbx.pc.in  mbx_version.h.in  sourceme.sh  unconverged.xyz
plugins/i-pi/: Makefile.am  Makefile.in
plugins/openmm/: CMakeLists.txt
plugins/openmm/python/: CMakeLists.txt  MANIFEST.in  mbnrg.py  mbnrg.xml  mbnrgplugin.i  setup.py
plugins/openmm/tests/: water3.py  water3cl1.py
src/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile.am  Makefile.in
src/Catch2/single_include/: catch.hpp
src/bblock/: CMakeLists.txt  Makefile  connectivity.cpp  connectivity.h  dim_co2_co2.cpp  dim_co2_co2.h  dimer.cpp  external_call.cpp  molecule.cpp  molecule.h  mon_co2.cpp  mon_h2o.cpp  mon_so4.cpp  mon_so4.h  monomer.cpp  monomer.h  sys_tools.cpp  sys_tools.h  system.cpp  system.h
src/bblock/old/: Makefile_old  molecule.cpp  mon_co2.cpp  mon_h2o.h
src/errors/: Makefile  errorcodes.cpp
src/install/: config.sh
src/io_tools/: CMakeLists.txt  Makefile  Makefile_BK  read_connectivity.cpp  read_connectivity.h  read_nrg.cpp  read_nrg.h  read_xyz.cpp  read_xyz.h  write_connectivity.cpp  write_connectivity.h  write_nrg.cpp  write_nrg.h  write_xyz.cpp  write_xyz.h
src/io_tools/old/: read_nrg.cpp  write_nrg.cpp
src/kdtree/: kdtree_utils.h  nanoflann.hpp
src/main/: CMakeLists.txt  Makefile  clusters_ultimate.cpp  energy.cpp  mb_decomp.cpp  normal-modes.cpp  optimize.cpp  order_frames.cpp  single_point.cpp
src/potential/: CMakeLists.txt
src/potential/1b/: CMakeLists.txt  Makefile  Makefile_BK  energy1b.cpp  energy1b.h  mbnrg_1b_A1B2_deg6_vmbpbe.cpp  mbnrg_1b_A1B2_deg6_vmbpbe.h  mbnrg_1b_A1B3_deg5_v1.cpp  mbnrg_1b_A1B3_deg5_v1.h  mbnrg_1b_A1B3_deg6_v1.cpp  mbnrg_1b_A1B3_deg6_v1.h  mbnrg_1b_A2_deg8_v1.cpp  mbnrg_1b_A2_deg8_v1.h  poly_1b_A1B2C4_deg5_v1.cpp  poly_1b_A1B2C4_deg5_v1x.cpp  poly_1b_A1B2C4_deg5_v1x.h  poly_1b_A1B2_deg4_v1x.cpp  poly_1b_A1B2_deg4_v1x.h  poly_1b_A1B2_deg6_grad_vmbpbe.cpp  poly_1b_A1B2_deg6_nograd_vmbpbe.cpp  poly_1b_A1B2_deg6_vmbpbe.h  poly_1b_A1B3_deg5_grad_v1.cpp  poly_1b_A1B3_deg5_nograd_v1.cpp  poly_1b_A1B3_deg5_v1.h  poly_1b_A1B3_deg6_grad_v1.cpp  poly_1b_A1B3_deg6_nograd_v1.cpp  poly_1b_A1B3_deg6_v1.h  poly_1b_A1B4_3deg.cpp  poly_1b_A1B4_deg5_exp0_v1.cpp  poly_1b_A1B4_deg5_exp0_v1x.cpp  poly_1b_A1B4_deg5_exp0_v1x.h  poly_1b_A1B4_deg5_v1.cpp  poly_1b_A1B4_deg5_v1x.cpp  poly_1b_A1B4_deg5_v1x.h  poly_1b_A1B6_deg5_v1.cpp  poly_1b_A1B6_deg5_v1x.cpp  poly_1b_A1B6_deg5_v1x.h  poly_1b_A2_deg8_grad_v1.cpp  poly_1b_A2_deg8_nograd_v1.cpp  ps.cpp  (+13 more)
src/potential/2b/: CMakeLists.txt  energy2b.cpp  energy2b.h  mbnrg_2b_A1B2Z2_A1B2Z2_deg4_vmbpbe.cpp  mbnrg_2b_A1B2Z2_A1B2Z2_deg4_vmbpbe.h  mbnrg_2b_A1B2Z2_C2_deg5_v1.cpp  mbnrg_2b_A1B2Z2_C2_deg5_v1.h  mbnrg_2b_A1B3_A1B3_deg4_v1.cpp  mbnrg_2b_A1B3_A1B3_deg4_v1.h  mbnrg_2b_A1B3_A1B3_deg5_v1.cpp  mbnrg_2b_A1B3_A1B3_deg5_v1.h  mbnrg_2b_A1B4_C1D2_deg4_v1.cpp  mbnrg_2b_A1B4_C1D2_deg4_v1.h  mbnrg_2b_A1_A1_deg9_v1.cpp  mbnrg_2b_A1_A1_deg9_v1.h  mbnrg_2b_A1_B1C2X2_deg5_v1.cpp  mbnrg_2b_A1_B1C2X2_deg6_v1.cpp  mbnrg_2b_A1_B1C2X2_deg6_v1.h  mbnrg_2b_A1_B1_deg15_v1.cpp  mbnrg_2b_A1_B1_deg15_v1.h  mbnrg_2b_A1_B1_deg9_v1.cpp  mbnrg_2b_A1_B1_deg9_v1.h  mbnrg_2b_A1_B2_deg7_v1.cpp  mbnrg_2b_A1_B2_deg7_v1.h  mbnrg_2b_A2_A2_deg6_v1.cpp  mbnrg_2b_A2_A2_deg6_v1.h  poly-2b-A1B2Z2_C-v1.cpp  poly-2b-A1B2Z2_C-v1x.cpp  poly-2b-A1B2Z2_C-v1x.h  poly-2b-v6x-nogrd.cpp  poly-2b-v6x.cpp  poly-2b-v6x.h  poly_2b_A1B2C4_D1E2_deg3_v1.cpp  poly_2b_A1B2C4_D1E2_deg3_v1x.cpp  poly_2b_A1B2C4_D1E2_deg3_v1x.h  poly_2b_A1B2Z2_A1B2Z2_deg4_grad_vmbpbe.cpp  poly_2b_A1B2Z2_A1B2Z2_deg4_nograd_vmbpbe.cpp  poly_2b_A1B2Z2_A1B2Z2_deg4_vmbpbe.h  poly_2b_A1B2Z2_C1D2_v1.cpp  poly_2b_A1B2Z2_C1D2_v1x.cpp  (+96 more)
src/potential/3b/: CMakeLists.txt  energy3b.cpp  energy3b.h  mbnrg_3b_A1B2C4_D1E2_D1E2_deg3_v1.cpp  mbnrg_3b_A1B2C4_D1E2_D1E2_deg3_v1.h  mbnrg_3b_A1B2_A1B2_A1B2_deg4_v1.cpp  mbnrg_3b_A1B2_A1B2_A1B2_deg4_v1.h  mbnrg_3b_A1B2_A1B2_A1B2_deg4_vmbpbe.cpp  mbnrg_3b_A1B4_C1D2_C1D2_deg3_v1.cpp  poly-3b-v2x-nogrd.cpp  (+38 more)
src/tests/: CMakeLists.txt  addclusters_test.cpp  bad_inputs-test.cpp  combinations-test.cpp  elec_tools-test.cpp  energy_wgrad-test.cpp  energy_wograd-test.cpp  ff_energy_wgrad-test.cpp  ff_energy_wograd-test.cpp  generate_define_system.cpp  get_2b_energies_list.cpp  getset-test.cpp  io-test.cpp  mbd.cpp  n_single_point.cpp  optimize.cpp  pbc-test.cpp  single_point.cpp  single_point_external_chg.cpp  sys-test.cpp  system-test.cpp  systools-test.cpp  test_tt.cpp  test_virial.cpp  test_virial_dimer_scan.cpp  timing.cpp
src/tools/: CMakeLists.txt  Makefile  constants.h  custom_exceptions.h  definitions.h  kdtree_utils.h  macros.h  math_tools.cpp  math_tools.h  mpi_helper.cpp  mpi_helper.h  mt19937.cpp  mt19937.h  pbctools.cpp  pbctools.h  properties.cpp  properties.h  random-rotation.cpp  random-rotation.h  read-nrg.cpp  read_nrg.cpp  sys_tools.cpp  sys_tools.h  testutils.h  variable.cpp  variable.h  water_monomer_lp.cpp  water_monomer_lp.h  write-nrg.cpp  xmin.cpp  xmin.h
src/unittests/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  setup_co2_2_h2o_2.h  setup_h2o_2_ch4_1.h  setup_monomer_custom_json.h  setup_monomer_mix.h  unittest-angle  unittest-angle.cpp  unittest-bond  unittest-buckingham.cpp  unittest-bucktools  unittest-bucktools.cpp  unittest-connectivity  unittest-connectivity.cpp  unittest-dihedral  unittest-dispersion.cpp  unittest-disptools  unittest-disptools.cpp  unittest-electrostatics.cpp  unittest-energy1b.cpp  unittest-energy2b.cpp  unittest-energy3b.cpp  unittest-energy4b.cpp  unittest-energyff  unittest-ffcalculators  unittest-ffcalculators.cpp  unittest-gamma  unittest-gamma.cpp  unittest-inversion  unittest-lj.cpp  unittest-ljtools  unittest-ljtools.cpp  unittest-poly-1b  unittest-poly-1b.cpp  unittest-poly-2b.cpp  unittest-poly-3b.cpp  unittest-poly-holder-2b.cpp  unittest-poly-holder-3b.cpp  (+7 more)
(+1607 files in other folders)
